<resources>
    <string name="app_name">iEvents</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember me?</string>
    <string name="events">Events list</string>
    <string name="profile">My Account</string>
    <string name="logout">Log out</string>
    <string name="title_activity_maps">Map</string>

</resources>
